@@ -1,7 +1,10 @@
 #   This file is read from icmake/special
 
 bigint
-digestbuf
-hmacbuf
-encryptbuf
 decryptbuf
+digestbuf
+encryptbuf
+hmacbuf
+isymcryptstream
+isymcryptstreambuf
+symcryptstreambufbase
