@@ -1,0 +1,5 @@
+#include "isymcryptstreambuf.ih"
+
+ISymCryptStreambuf::
+{
+}
