@@ -1,0 +1,10 @@
+#include "symcryptstreambufbase.ih"
+
+void SymCryptStreambufBase::checkOutBufSize(size_t inputSize)
+{
+    size_t outBufSize = (inputSize + d_blockSize - 1) / d_blockSize *
+                                                                d_blockSize;
+
+    if (outBufSize > d_outBufSize)
+        d_outBuf.reset(new char[d_outBufSize = outBufSize]);
+}
