@@ -1,0 +1,5 @@
+#include "symcryptstreambufbase.ih"
+
+SymCryptStreambufBase::
+{
+}
