@@ -1,0 +1,6 @@
+#include "symcryptstreambufbase"
+
+#include <istream>
+
+using namespace std;
+using namespace FBB;
