@@ -3,6 +3,11 @@ bobcat (3.15.00)
   * Added class IFilterStreambuf, implementing filtering like, e.g., openSSL
     BIOs.
 
+  * Added class ISymCryptStreambuf and its (internal use only) base class 
+    SymCryptStreambufBase, implementing SSL-provided symmetric en- and
+    decryption using the IFilterStreambuf design pattern.
+
+
 bobcat (3.14.00)
 
   * Syslogbuf and SyslogStream received an overhaul, adding several new
